updated openApi specification
